<resources>
    <string name="app_name">Sistem Penilaian Mahasiswa</string>

    <string name="logo_image">Logo Image</string>
    <string name="login_image">Login Image</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="login_desc">Selamat datang di sistem penilaian mahasiswa Universitas Pendidikan Indonesia</string>
    <string name="email">Email</string>
    <string name="hint_email">Masukan alamat email</string>
    <string name="password">Password</string>
    <string name="password_hint">Masukan Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="loading_text">Mohon Tunggu</string>
    <string name="close">Tutup</string>
    <string name="hint_search">Cari Mahasiswa</string>
    <string name="detail_mahasiswa">Detail Mahasiswa</string>
    <string name="nilai_tugas">Nilai Tugas</string>
    <string name="nilai_quiz">Nilai Quiz</string>
    <string name="nilai_uts">Nilai UTS</string>
    <string name="nilai_uas">Nilai UAS</string>
    <string name="tambah_nilai">Tambah Nilai</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="hint_mata_kuliah">Masukkan Mata Kuliah</string>

    <string name="major_entry_year">%s \u2022 %s</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="hint_mahasiswa">Masukan Nama Mahasiswa</string>
    <string name="hint_nilai_tugas">Masukkan Nilai Tugas (0–100)</string>
    <string name="hint_nilai_quiz">Masukkan Nilai Quiz (0–100)</string>
    <string name="hint_nilai_uts">Masukkan Nilai UTS (0–100)</string>
    <string name="hint_nilai_uas">Masukkan Nilai UAS (0–100)</string>
    <string name="hint_nilai">Masukkan Nilai (0–100)</string>
    <string name="simpan">Simpan</string>
    <string name="empty_input">%s tidak boleh kosong</string>
    <string name="more_than_hundred_input">%s harus di antara 0 dan 100</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="lihat_lebih_sedikit">Lihat Lebih Sedikit</string>
    <string name="help">Help</string>
    <string name="bantuan">Bantuan</string>
    <string name="help_text">Ketentuan Penilaian:\n1. Total nilai tugas (10%)\n2. Total nilai quiz (20%)\n3. Total nilai UTS (30%)\n4. Total nilai UAS (40%)\n\nPredikat nilai terdiri dari: \nA : Nilai lebih dari 92\nA– : Nilai di antara 86–91\nB+ : Nilai di antara 81–85\nB : Nilai di antara 76–80\nB– : Nilai di antara 71–75\nC+ : Nilai di antara 66–70\nC : Nilai di antara 60–65\nD : Nilai di antara 55–59\nE : Nilai di bawah 55</string>
    <string name="nama">Nama</string>
    <string name="hint_nama">Masukkan Nama Mahasiswa</string>
    <string name="nim">NIM</string>
    <string name="nim_hint">Masukkan NIM</string>
    <string name="jurusan">Jurusan</string>
    <string name="jurusan_hint">Masukkan Jurusan</string>
    <string name="tahun_masuk">Tahun Masuk</string>
    <string name="masukan_tahun_masuk">Masukan Tahun Masuk</string>
    <string name="tambah_mahasiswa">Tambah Mahasiswa</string>
    <string name="logout">Logout</string>
    <string name="login_sebagai">Login sebagai:</string>
    <string name="profile">Profile</string>
    <string name="nilai">Nilai</string>
    <string name="keterangan">Keterangan</string>

    <string name="nilai_a">Sangat baik dan sempurna. Mengikuti seluruh perkuliahan dan menerapkan materi dengan sangat baik</string>
    <string name="nilai_amin">Baik dan sempurna. Dapat mengikuti seluruh perkuliahan dan menerapkan materi dengan cukup baik</string>
    <string name="nilai_bplus">Sangat baik. Mengikuti seluruh perkuliahan dengan baik, tetapi dalam penerapan materi belum dapat dikatakan sempurna</string>
    <string name="nilai_b">Baik. Mengikuti seluruh perkuliahan dengan baik, tetapi dalam penerapan materi belum mampu menerapkan seluruh materi perkuliahan</string>
    <string name="nilai_bmin">Cukup baik. Mengikuti perkuliahan dengan baik, tetapi belum dapat menerapkan materi perkuliahan</string>
    <string name="nilai_c_plus">Cukup. Selalu hadir dalam perkuliahan tetapi masih terlihat kesulitan memahami isi dari materi perkuliahan</string>
    <string name="nilai_c">Cukup. Selalu hadir dalam perkuliahan tetapi masih sangatt kesulitan memahami isi dari materi perkuliahan</string>
    <string name="nilai_d">Kurang baik. Tidak terlihat aktif dan tidak memahami sama sekali materi di dalam perkuliahan</string>
    <string name="nilai_e">Buruk. Kehadiran kurang dari syarat minimum dan masih sangat kesulitan dalam mengikuti perkuliahan</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="aksi">Aksi</string>
    <string name="edit_mahasiswa">Edit Mahasiswa</string>
</resources>